# nops-metadata

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py  test.py
metadata_producer/: __init__.py  constants.py  schema.py  utils.py
nops_metadata/: __init__.py  constants.py  schema.py  spark_schema.py  utils.py
nops_metadata/tests/: conftest.py  test_fetcher.py  test_schema.py  test_spark.py
wiki/: subresources.md
