[tool.poetry]
name = "nops-metadata"
version = "0.4.7"
description = "Metadata producer tooling used in nOps.io"
authors = ["nOps Engineers <eng@nops.io>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = ">=1.17.102"
pyrsistent = ">=0.17.3"
pydantic = ">=1.8.0"
pyspark = { version = "3.3.1", extras = ["sql"] }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-xdist = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
force_single_line = true
default_section = 'THIRDPARTY'
known_django = 'django'
sections = 'FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER'
